@@ -3,18 +3,23 @@ package com.nomorelaps.adapters.in.rest;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.when;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.http.MediaType;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
@@ -26,95 +31,102 @@ import com.nomorelaps.domain.models.ParkingSpot;
 
 /**
  * Integration tests for ParkingSpotController.
- *
+ * Validates parking spot management, availability checks, and status updates.
+ * 
  * @author nexphernandez
- * @version 1.0.0
+ * @version 1.1.0
  */
 @SpringBootTest
-@AutoConfigureMockMvc
+@AutoConfigureMockMvc(addFilters = false)
 class ParkingSpotControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
 
-    @MockBean
-    private IParkingSpotService parkingSpotService;
-
     @Autowired
     private ObjectMapper objectMapper;
 
-    @Test
-    @DisplayName("POST /api/parking-spots - Should create spot")
-    @WithMockUser(roles = "COMPANY")
-    void shouldCreateParkingSpot() throws Exception {
-        ParkingSpotRequest request = new ParkingSpotRequest();
-        request.setNumber(101);
+    @MockitoBean
+    private IParkingSpotService parkingSpotService;
 
-        ParkingSpot saved = new ParkingSpot(1L);
-        when(parkingSpotService.create(any(ParkingSpot.class))).thenReturn(saved);
+    private ParkingSpotRequest validRequest;
+    private ParkingSpot sampleSpot;
+
+    @BeforeEach
+    void setUp() {
+        validRequest = new ParkingSpotRequest();
+        validRequest.setNumber(101);
+        validRequest.setState(true);
+
+        sampleSpot = new ParkingSpot(1L);
+        sampleSpot.setNumber(101);
+        sampleSpot.setState(true);
+    }
+
+    @Test
+    @DisplayName("POST /api/parking-spots - Success: Should create spot")
+    @WithMockUser(roles = "COMPANY")
+    void shouldCreateParkingSpotSuccessfully() throws Exception {
+        when(parkingSpotService.create(any(ParkingSpot.class))).thenReturn(sampleSpot);
 
         mockMvc.perform(post("/api/parking-spots")
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(request)))
+                .content(objectMapper.writeValueAsString(validRequest)))
                 .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.id").value(1));
+                .andExpect(jsonPath("$.id").value(1L))
+                .andExpect(jsonPath("$.number").value(101));
     }
 
     @Test
-    @DisplayName("GET /api/parking-spots/{id} - Found")
-    @WithMockUser(roles = "COMPANY")
-    void shouldReturnParkingSpotById() throws Exception {
-        ParkingSpot spot = new ParkingSpot(1L);
-        when(parkingSpotService.findById(1L)).thenReturn(Optional.of(spot));
+    @DisplayName("GET /api/parking-spots/{id} - Success: Should return spot data")
+    void shouldReturnParkingSpotByIdSuccessfully() throws Exception {
+        when(parkingSpotService.findById(1L)).thenReturn(Optional.of(sampleSpot));
 
         mockMvc.perform(get("/api/parking-spots/1"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(1));
+                .andExpect(jsonPath("$.id").value(1L));
     }
 
     @Test
-    @DisplayName("GET /api/parking-spots/parking/{id} - List")
-    @WithMockUser(roles = "COMPANY")
-    void shouldReturnParkingSpots() throws Exception {
-        when(parkingSpotService.findByParkingId(1L)).thenReturn(Collections.emptyList());
+    @DisplayName("GET /api/parking-spots/parking/{id} - Success: Should return list of spots")
+    void shouldReturnSpotsByParkingIdSuccessfully() throws Exception {
+        when(parkingSpotService.findByParkingId(10L)).thenReturn(List.of(sampleSpot));
 
-        mockMvc.perform(get("/api/parking-spots/parking/1"))
+        mockMvc.perform(get("/api/parking-spots/parking/10"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$").isArray());
+                .andExpect(jsonPath("$").isArray())
+                .andExpect(jsonPath("$[0].id").value(1L));
     }
 
     @Test
-    @DisplayName("GET /api/parking-spots/parking/{id}/available - List")
-    @WithMockUser
-    void shouldReturnAvailableSpots() throws Exception {
-        when(parkingSpotService.findAvailableSpots(1L)).thenReturn(Collections.emptyList());
+    @DisplayName("GET /api/parking-spots/parking/{id}/available - Success: Should return only available spots")
+    void shouldReturnAvailableSpotsSuccessfully() throws Exception {
+        when(parkingSpotService.findAvailableSpots(10L)).thenReturn(List.of(sampleSpot));
 
-        mockMvc.perform(get("/api/parking-spots/parking/1/available"))
+        mockMvc.perform(get("/api/parking-spots/parking/10/available"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$").isArray());
+                .andExpect(jsonPath("$").isArray())
+                .andExpect(jsonPath("$[0].state").value(true));
     }
 
     @Test
-    @DisplayName("PUT /api/parking-spots/{id} - Updated")
+    @DisplayName("PUT /api/parking-spots/{id} - Success: Should update spot")
     @WithMockUser(roles = "COMPANY")
-    void shouldUpdateParkingSpot() throws Exception {
-        ParkingSpotRequest request = new ParkingSpotRequest();
-        request.setNumber(102);
-
-        ParkingSpot updated = new ParkingSpot(1L);
-        when(parkingSpotService.update(any(ParkingSpot.class))).thenReturn(updated);
+    void shouldUpdateParkingSpotSuccessfully() throws Exception {
+        sampleSpot.setState(false);
+        when(parkingSpotService.update(any(ParkingSpot.class))).thenReturn(sampleSpot);
 
         mockMvc.perform(put("/api/parking-spots/1")
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(request)))
+                .content(objectMapper.writeValueAsString(validRequest)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(1));
+                .andExpect(jsonPath("$.state").value(false));
     }
 
     @Test
-    @DisplayName("DELETE /api/parking-spots/{id} - Deleted")
+    @DisplayName("DELETE /api/parking-spots/{id} - Success: Should return 204")
     @WithMockUser(roles = "COMPANY")
-    void shouldDeleteParkingSpot() throws Exception {
+    void shouldDeleteParkingSpotSuccessfully() throws Exception {
         doNothing().when(parkingSpotService).deleteById(1L);
 
         mockMvc.perform(delete("/api/parking-spots/1"))
